# ttllm-gateway

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile_claude  LICENSE  Makefile  README.md  RELEASE_DRAFT.md  alembic.ini  config.yaml  docker-compose.integration.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py  test_claude_docker.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/post_create/: 01-python-venv.sh  02-claude-code.sh
.github/workflows/: integration.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_auth_rbac.py  003_group_model_assignments.py  004_token_scope_permissions.py  005_roles_to_direct_permissions.py  006_seed_admin_user.py  007_secrets_table.py  008_server_status_permission.py  009_rename_token_revoke_add_secret_perms.py  010_oidc_states_table.py  011_admin_audit_logs_table.py  012_user_idp_refresh_columns.py  013_model_match_pattern.py  014_model_cache_pricing.py  014_rules_table.py  015_audit_provider_metadata.py  015_usage_limits.py  016_quota_manage_permission.py  016_rules_table.py  017_audit_user_created_index.py  017_window_seconds.py  018_model_display_name.py
docs/: rules-engine.md  user-guide.md
src/ttllm/: __init__.py  config.py  db.py
src/ttllm/api/: admin.py  app.py  auth.py  deps.py  me.py  messages.py  models.py
src/ttllm/cli/: _common.py  audit.py  chat.py  client.py  groups.py  limits.py  main.py  me.py  models.py  reports.py  rules.py  secrets.py  tokens.py  usage.py  users.py
src/ttllm/core/: bedrock.py  gateway.py  injection_signals.py  jwt.py  oidc.py  password.py  permissions.py  provider.py  rules.py  secrets.py  security_events.py  streaming.py  token_tracker.py  translator.py
src/ttllm/core/providers/: __init__.py  base.py  bedrock_provider.py  langchain_provider.py
src/ttllm/handlers/: ecs_entrypoint.py  lambda_handler.py
src/ttllm/models/: __init__.py  admin_audit.py  audit.py  auth.py  llm_model.py  oidc_state.py  quota.py  rule.py  secret.py  user.py
src/ttllm/schemas/: admin.py  anthropic.py  auth.py  common.py  me.py  quota.py  rules.py
src/ttllm/services/: admin_audit_service.py  audit_service.py  auth_service.py  group_service.py  model_service.py  oidc_state_service.py  quota_service.py  rules_service.py  secret_service.py  usage_service.py  user_service.py
src/ttllm/ui/: index.html
tests/: conftest.py  test_auth.py  test_bedrock.py  test_cli_json.py  test_cli_usage.py  test_config_loader.py  test_eventstream_encoder.py  test_messages_stream_disconnect.py  test_provider.py  test_providers.py  test_quota.py  test_rules.py  test_security.py  test_streaming.py  test_token_tracker.py  test_translator.py
tests/config_fixtures/: base.yaml  with_circular_include_a.yaml  with_circular_include_b.yaml  with_circular_ref.yaml  with_dict_ref.yaml  with_include_and_ref.yaml  with_include_overrides.yaml  with_missing_include.yaml  with_missing_ref.yaml  with_multi_include.yaml  with_nested_include.yaml  with_nested_include_override.yaml  with_nested_refs.yaml  with_refs.yaml  with_root_include.yaml  with_single_include.yaml
tests/config_fixtures/shared/: nested_include.yaml  outputs_defaults.yaml  splunk_output.yaml  sqs_defaults.yaml
tests/config_fixtures/shared/deep/: deep_shared.yaml
tests/integration/: conftest.py  test_access_control.py  test_bootstrap_flow.py  test_caching.py  test_messages_nonstream.py  test_messages_stream.py  test_quota_rules.py
tests/integration/fake_bedrock/: Dockerfile  app.py  eventstream_encoder.py
tools/: get_model_price.sh  simulate_quota.sh
