[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttllm-gateway"
dynamic = ["version"]
description = "LLM Gateway with Anthropic-compatible API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Lech Lachowicz", email = "lech.lachowicz@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "langchain-core>=0.3",
    "langchain-aws>=0.2",
    "langchain-community>=0.3",
    "mangum>=0.19",
    "httpx>=0.28",
    "typer>=0.15",
    "rich>=13",
    "python-ulid>=3",
    "pyyaml>=6",
    "lru-dict>=1.3",
    "boto3>=1.35",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "factory-boy",
    "black",
    "flake8",
    "isort",
]

[project.scripts]
ttllm = "ttllm.cli.main:app"

[project.urls]
Homepage = "https://github.com/ponquersohn/ttllm-gateway"
Repository = "https://github.com/ponquersohn/ttllm-gateway"
Issues = "https://github.com/ponquersohn/ttllm-gateway/issues"

[tool.hatch.version]
path = "src/ttllm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ttllm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "failing_test: marks tests as known failing (deselect with '-m \"not failing_test\"')",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 121
extend-ignore = ["E203", "W503", "E501"]
